# BeagleWatch

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
app/: CyberSecFeeds.py
app/web/: news_feeder.py
app/web/static/css/: style.css
app/web/templates/: index.html  view_md.html  view_md_fragment.html
model/: FeedItem.py
services/: AssetManager.py  FeedFetcher.py  MarkdownStore.py
